--- a/style.css
+++ b/style.css
@@ -16,8 +16,15 @@ body{
 }
 
 .logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 50px;
+    font-family: 'Courier New', Courier, monospace;
     max-width: 600px;
     margin-bottom: 24px;
+    color: #FFF;
 }
 
 .container-input{
