--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     align-items: center;
     flex-direction: column;
     font-size: 30px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     max-width: 600px;
     margin-bottom: 24px;
     color: #FFF;
