--- a/style.css
+++ b/style.css
@@ -15,21 +15,32 @@ body{
     flex-direction: column;
 }
 
+
 .logo{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 30px;
+    font-size: 40px;
+    font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     max-width: 600px;
     margin-bottom: 24px;
-    color: #FFF;
+    color: #b1adad;
 }
 
 .container-input{
     max-width: 480px;
+    min-width: 240;
     margin: 14px 0;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
 }
 
 .container-input span{
@@ -41,7 +52,7 @@ body{
     -webkit-appearance: none;
     width: 100%;
     border-radius: 5px;
-    background: #DFDFDF;
+    background: #a1a3a3;
     height: 18px;
     outline: none;
     margin-top: 8px;
@@ -49,7 +60,7 @@ body{
 
 .button-cta{
     height: 40px;
-    background-color: greenyellow;
+    background-color: #a1a3a3;
     border: 0;
     border-radius: 4px;
     cursor: pointer;
@@ -60,12 +71,11 @@ body{
 }
 
 .container-password{
-    max-width: 480px;
-    margin: 14px 0;
     display: flex;
     align-items: center;
     flex-direction: column;
     cursor: pointer;
+    max-width: 400px;
 }
 
 .title{
@@ -114,4 +124,21 @@ body{
     visibility: visible;
     bottom: 50px;
     opacity: 1;
+}
+
+.corpo{
+    
+    border: solid;
+    border-color: #7a7999;
+    background-color: #DFDFDF;
+    box-shadow: 2px 2px 10px rgb(208, 211, 211);
+    border-radius: 40px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    max-width: 800px;
+    min-width: 300px;
+    height: 380px;
+    min-width: 350px;
 }
